--- a/ablog/theblog/templates/article_details.html
+++ b/ablog/theblog/templates/article_details.html
@@ -1,6 +1,14 @@
+{% extends 'base.html' %}
+
+{% block title %}{{ post.title_tag }}{% endblock %}
+
+{% block content %}
+
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author.first_name }} {{ post.author.last_name }}</small>
 <hr><br>
 {{ post.body }}
 <br><br>
-<a href="{% url 'home' %}">Go back</a>
+<a href="{% url 'home' %}" class="btn btn-secondary">Go back</a>
+
+{% endblock %}
