--- a/ablog/theblog/templates/home.html
+++ b/ablog/theblog/templates/home.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+
+{% block content %}
+
 <h1>Posts</h1>
 
 <ul>
@@ -8,3 +12,5 @@
 
 {% endfor %}
 </ul>
+
+{% endblock %}
