lesson 6, 7 - update and delete post

--- a/ablog/theblog/templates/home.html
+++ b/ablog/theblog/templates/home.html
@@ -7,7 +7,9 @@
 <ul>
 {% for post in object_list %}
 
-    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a> - {{ post.author.first_name }} {{ post.author.last_name }}<br>
+    <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a>
+        - {{ post.author.first_name }} {{ post.author.last_name }} - <a href="{% url 'update-post' post.pk %}">(Edit)</a>
+        <a href="{% url 'delete-post' post.pk %}">(Delete)</a><br>
     {{ post.body }}</li>
 
 {% endfor %}
