--- a/ablog/theblog/templates/article_details.html
+++ b/ablog/theblog/templates/article_details.html
@@ -5,7 +5,8 @@
 {% block content %}
 
 <h1>{{ post.title }}</h1>
-<small>By: {{ post.author.first_name }} {{ post.author.last_name }}</small>
+<small>By: {{ post.author.first_name }} {{ post.author.last_name }} - <a href="{% url 'update-post' post.pk %}">(Edit)</a>
+<a href="{% url 'delete-post' post.pk %}">(Delete)</a></small>
 <hr><br>
 {{ post.body }}
 <br><br>
