--- a/ablog/theblog/templates/delete_post.html
+++ b/ablog/theblog/templates/delete_post.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+{% if user.is_authenticated %}
+
 <h1>Delete Post</h1><br>
 <h3>Delete: {{ post.title }}</h3>
 
@@ -13,5 +15,11 @@
     <strong>Are you sure?</strong><br><br>
     <button class="btn btn-secondary">Delete</button>
 </form>
+
+{% else %}
+
+Access denied.
+
+{% endif %}
 
 {% endblock %}
