--- a/ablog/theblog/templates/article_details.html
+++ b/ablog/theblog/templates/article_details.html
@@ -5,8 +5,12 @@
 {% block content %}
 
 <h1>{{ post.title }}</h1>
-<small>By: {{ post.author.first_name }} {{ post.author.last_name }} - {{ post.post_date }} - <a href="{% url 'update-post' post.pk %}">(Edit)</a>
-<a href="{% url 'delete-post' post.pk %}">(Delete)</a></small>
+<small>By: {{ post.author.first_name }} {{ post.author.last_name }} - {{ post.post_date }}
+    {% if user.is_authenticated %}
+    - <a href="{% url 'update-post' post.pk %}">(Edit)</a>
+    <a href="{% url 'delete-post' post.pk %}">(Delete)</a>
+    {% endif %}
+</small>
 <hr><br>
 {{ post.body }}
 <br><br>
