--- a/ablog/theblog/templates/home.html
+++ b/ablog/theblog/templates/home.html
@@ -8,9 +8,13 @@
 {% for post in object_list %}
 
     <li><a href="{% url 'article-detail' post.pk %}">{{ post.title }}</a>
-        - {{ post.author.first_name }} {{ post.author.last_name }} - <a href="{% url 'update-post' post.pk %}">(Edit)</a>
-        <a href="{% url 'delete-post' post.pk %}">(Delete)</a><br>
-    {{ post.body }}</li>
+        - {{ post.author.first_name }} {{ post.author.last_name }}
+        {% if user.is_authenticated %}
+            - <a href="{% url 'update-post' post.pk %}">(Edit)</a>
+            <a href="{% url 'delete-post' post.pk %}">(Delete)</a>
+        {% endif %}
+        <br>
+    {{ post.body|slice:"200" }}...</li>
 
 {% endfor %}
 </ul>
